.infrastructure/ingress/demo-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: kube2py-blue
  labels:
    app: kube2py-blue
spec:
  containers:
  - name: kube2py
    image: ikulyk404/kube2py:blue
    resources:
      requests:
        memory: "64Mi"
        cpu: "30m"
      limits:
        memory: "64Mi"
        cpu: "30m"
    ports:
    - containerPort: 8080
    livenessProbe:
      httpGet:
        path: /health
        port: 8080
      initialDelaySeconds: 60
      periodSeconds: 5
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
      initialDelaySeconds: 5
      periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: kube2py-blue-service
spec:
  selector:
    app: kube2py-blue
  ports:
  - port: 80
    targetPort: 8080
